# leaneth-crypto-curriculum

./: .gitignore  Cargo.toml  README.md
reed_solomon/: Cargo.toml  README.md
reed_solomon/src/: decode.rs  domain.rs  encode.rs  fft.rs  field.rs  interpolate.rs  lib.rs  polynomial.rs
reed_solomon/tests/: integration.rs
stir/: Cargo.toml  README.md
stir/src/: commitment.rs  degree_correction.rs  domain.rs  fold.rs  lib.rs  merkle.rs  ood.rs  params.rs  proof.rs  protocol.rs  prover.rs  quotient.rs  transcript.rs  verifier.rs
stir/tests/: integration.rs
sumcheck/: Cargo.toml  README.md
sumcheck/src/: domain.rs  field.rs  lib.rs  polynomial.rs  protocol.rs  prover.rs  verifier.rs
sumcheck/tests/: integration.rs
sumcheck_python/: __init__.py  demo.py  domain.py  field.py  polynomial.py  protocol.py  prover.py  verifier.py
